# result

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  make.cmd  makefile  readme.md
res/: launch.vs.json.in  license.rtf  license.txt
res/scripts/: source.cmake  target.cmake
src/: error.hpp  main.cpp  main.manifest  main.rc  result.hpp  utility.hpp
src/cpu/: info.cpp  info.hpp
